--- a/style.css
+++ b/style.css
@@ -6,11 +6,36 @@ body {
 font: 71%/1.5 Verdana, Sans-Serif;  
 background: #eee;  
 }  
-#keystroke {
+#help{
+    position:absolute;
+    top: 130px;
+    right: 50px;
+}
+#title{
+    position: absolute;
+    top: 20px;
+    font-weight: bold;
     background: #eee;
     width: 600px;
-    margin: auto;
+    margin-left:auto;
+    margin-right:auto;
+    left: 0;
+    right: 0;
     text-align: center;
+    font-size:120%;
+}
+#keystroke {
+    position: absolute;
+    top: 20px;
+    font-weight: bold;
+    background: #eee;
+    width: 600px;
+    margin-left:auto;
+    margin-right:auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size:120%;
 }
 #inputbox{
     position: absolute;
@@ -24,8 +49,15 @@ margin: 100px auto;
 width: 688px;  
 }  
 #description{
+    position: absolute;
     text-align: center;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    top: 50px;
+    left: 0;
+    right: 0;
+    font-size:200%;
+    color: #352b2a;
 
 }
 #write {  
@@ -60,7 +92,6 @@ list-style: none;
         clear: left;  
         }  
             #keyboard .symbol {
-                color: grey;
             }
 
             #keyboard .function {
